--- a/Replay/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Replay/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonCPP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonCPP/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -98,8 +98,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonCPP/Maps/MainMenuMap
 
 [ModuleFileTracking]
-Replay.TimeStamp=2018.06.14-14.27.31
-Replay.LastCompileMethod=External
+Replay.TimeStamp=2018.06.18-22.47.49
+Replay.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.05.29-11.46.14
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.05.29-11.46.16
@@ -695,7 +695,7 @@ MovieSceneCapture.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=904.000 Y=290.000
+ScreenPosition=X=2179.000 Y=94.000
 WindowSize=X=850.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1305,6 +1305,23 @@ MainMenuMap_C.Input=True
 MainMenuMap_C.Actor=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
+FirstPersonCharacter_C.Sockets=True
+FirstPersonCharacter_C.Events=True
+K2Node_VariableGet.Color Grading=True
+K2Node_VariableGet.Film=True
+K2Node_VariableGet.Mobile Tonemapper=True
+K2Node_VariableGet.Lens=True
+K2Node_VariableGet.Rendering Features=True
+Slider.Layout=True
+Slider.Appearance=True
+Slider.Style=True
+Slider.Interaction=True
+Slider.Behavior=True
+Slider.Render Transform=True
+Slider.Performance=True
+Slider.Clipping=True
+Slider.Navigation=True
+Slider.Events=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1327,6 +1344,7 @@ WidgetSwitcher="\"Object.Render Transform.RenderTransform\" \"Object.Render Tran
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 ScrollBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 WID_MainMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+Slider="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [/Script/UnrealEd.ClassViewerSettings]
 DisplayInternalClasses=True
@@ -1338,6 +1356,7 @@ DeveloperFolderType=CVDT_None
 /Game/FirstPersonCPP/Blueprints/WID_ReplaySlot.WID_ReplaySlot=1
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/FirstPersonCPP/Blueprints/WID_MainMenu.WID_MainMenu=1
+/Game/FirstPersonCPP/Blueprints/WID_ReplaySpectator.WID_ReplaySpectator=1
 
 [WidgetTemplatesExpanded]
 Common=False
